# Epydex

./: CMakeLists.txt  LICENSE  README.md  library.h
include/: Agent.h  AgentAttributes.h  AgentGenerator.h  AgentResults.h  Agents.h  Clock.h  DataVariant.h  Event.h  MemoryMappedTable.h  Model.h  ModelResults.h  Property.h
src/: Agent.cpp  AgentAttributes.cpp  AgentGenerator.cpp  AgentResults.cpp  Agents.cpp  Clock.cpp  Event.cpp  MemoryMappedTable.cpp  Model.cpp  ModelResults.cpp  Property.cpp
tests/: ClockTest.cpp  test_main.cpp
